--- a/main/index/index.html
+++ b/main/index/index.html
@@ -40,14 +40,30 @@
         </div>
     </header>
 
-    <section id="hero-sobre-nos" class="hero">
-        <div class="hero-content">
-            <h1>Cloud Fellas: Inovação e Qualidade ao Seu Alcance</h1>
-            <p>Conheça nossa paixão por criar soluções que fazem a diferença. Da concepção à entrega, excelência é nossa
-                marca.</p>
+    <section id="hero-sobre-nos" class="hero-full-screen">
+        <div class="hero-overlay"></div> <div class="hero-content-sobre-nos">
+            <h1>Elevando sua Conectividade ao Próximo Nível!</h1>
+            <p>Especialistas em automação residencial e soluções IoT personalizadas para um futuro mais inteligente.</p>
+        </div>
+        <div class="stats-container">
+            <div class="stat-item fade-in">
+                <span class="stat-number">98%</span>
+                <span class="stat-description">satisfação do cliente</span>
+            </div>
+            <div class="stat-item fade-in">
+                <span class="stat-number">+500</span>
+                <span class="stat-description">projetos entregues</span>
+            </div>
+            <div class="stat-item fade-in">
+                <span class="stat-number">24/7</span>
+                <span class="stat-description">suporte dedicado</span>
+            </div>
+            <div class="stat-item fade-in">
+                <span class="stat-number">10+</span>
+                <span class="stat-description">anos de experiência</span>
+            </div>
         </div>
     </section>
-
     <main>
         <section id="general-overview-section" class="content-section">
             <h2 class="fade-in">Nossa Visão Geral</h2>
