--- a/main/projects/water control/waterControl.html
+++ b/main/projects/water control/waterControl.html
@@ -46,9 +46,35 @@
         </section>
 
         <section class="project-detail-content">
+            <h3>Demanda</h3>
+            <ul>
+                <li><strong>Falta de Água:</strong> Bomba não acionada a tempo, deixando a caixa vazia.</li>
+                <li><strong>Consumo Excessivo de Energia:</strong> Bomba funcionando mais que o necessário ou acionamentos inadequados.</li>
+                <li><strong>Monitoramento Ineficaz:</strong> Dificuldade em saber o nível atual da água sem inspeção manual.</li>
+            </ul>
+            <p>Nosso sistema automatizado resolve esses desafios, otimizando o uso e a disponibilidade da água.</p>
+        </section>
+
+        <section class="project-detail-content">
             <h3>Visão Geral do Projeto</h3>
             <p>Este projeto visa desenvolver e implementar um sistema de monitoramento inteligente para caixas d’água residenciais, utilizando tecnologia IoT. O principal objetivo é fornecer aos usuários informações precisas e em tempo real sobre o nível da água, e garantir que a água esteja sempre limpa e apta para consumo.</p>
             <p>O sistema consiste em sensores instalados na caixa d’água que medem o nível da água e medem o pH da água. Os dados coletados são enviados para uma plataforma na nuvem via protocolo MQTT, onde são processados e disponibilizados aos usuários através de um aplicativo móvel intuitivo.</p>
+
+            <div class="comparison-section">
+                <h3>Comparação Visual</h3>
+                <div class="comparison-grid">
+                    <div class="comparison-item">
+                        <h4>Antes da Implementação do Projeto</h4>
+                        <img src="../../pictures/antesMudanca.png" alt="Caixa d'água sem monitoramento, com bomba manual ou sem automação.">
+                        <p>Dificuldade em saber o nível exato da água. Risco de caixa vazia ou transbordamento. Monitoramento manual.</p>
+                    </div>
+                    <div class="comparison-item">
+                        <h4>Depois da Implementação do Projeto</h4>
+                        <a href="../../pictures/dpsMudanca.png" target="_blank"><img src="../../pictures/dpsMudanca.png" alt="Caixa d'água com sensores IoT e conectividade."></a>
+                        <p>Monitoramento em tempo real do nível e pH via aplicativo. Alertas automáticos. Otimização do acionamento da bomba e monitoramento na palma das mãos.</p>
+                    </div>
+                </div>
+            </div>
 
             <h3>Funcionalidades Principais</h3>
             <ul>
@@ -59,6 +85,36 @@
 
             <img src="../../pictures/appMovel.png" alt="Interface de um aplicativo de monitoramento de caixa d'água em um smartphone">
 
+            <div class="data-visualization-section">
+                <h3>Dados Atuais da Caixa d'Água</h3>
+                <div class="data-cards">
+                    <div class="data-card level-card">
+                        <i class="fas fa-water icon"></i>
+                        <h4>Nível da Água</h4>
+                        <div class="level-display">
+                            <span id="waterLevelValue">85</span>%
+                            <div class="water-bar">
+                                <div class="water-fill" style="height: 85%;"></div>
+                            </div>
+                        </div>
+                        <p class="status-message" id="levelStatus">Nível normal.</p>
+                    </div>
+
+                    <div class="data-card ph-card">
+                        <i class="fas fa-flask icon"></i>
+                        <h4>Qualidade da Água (pH)</h4>
+                        <div class="ph-display">
+                            <span id="phValue">7.2</span>
+                            <div class="ph-indicator-container">
+                                <div class="ph-indicator ph-normal" id="phIndicator"></div>
+                            </div>
+                        </div>
+                        <p class="status-message" id="phStatus">pH dentro do ideal.</p>
+                    </div>
+                </div>
+
+            </div>
+
             <h3>Tecnologias Utilizadas</h3>
             <ul>
                 <li>Sensores de nível</li>
@@ -68,17 +124,28 @@
                 <li>Desenvolvimento de aplicativo móvel (Android e iOS) com frameworks nativos ou híbridos (React Native, Flutter)</li>
                 <li>ESP32 para comunicação entre os sensores, a nuvem e o aplicativo</li>
             </ul>
+            <div class="technology-images">
+                <img src="../../pictures/esp32.jpg" alt="ESP32">
+                <img src="../../pictures/sensorDeNivel.jfif" alt="Sensor de nivel">
+                <img src="../../pictures/ph.jpg" alt="Sensor de pH">
+            </div>
 
             <h3>Benefícios do Sistema</h3>
             <ul>
                 <li><strong>Segurança:</strong> Se por algum motivo o pH da água estiver fora do seguro, você será notificado no app móvel.</li>
                 <li><strong>Comodidade e Controle:</strong> Acompanhe o status da sua caixa d’água de onde estiver, garantindo o abastecimento e evitando preocupações.</li>
+                <li><strong>Filtro Anti-Impurezas:</strong> Garante que a água que chega à sua caixa d'água passe por um sistema de filtragem adicional, aumentando a sua qualidade.</li>
                 <li><strong>Sustentabilidade:</strong> O uso eficiente da água contribui para a preservação desse recurso natural.</li>
             </ul>
 
             <div class="tinkercad-link">
-                <a href="https://www.tinkercad.com/things/lA6G3N4p6hF" target="_blank" aria-label="Simulação do projeto no TinkerCAD">
-                    <i class="fas fa-microchip"></i> Ver Simulação no TinkerCAD
+                <a href="https://www.tinkercad.com/things/8Tdjmfko5Ek-sensor-de-nivel" target="_blank" aria-label="Simulação do projeto - Sensor de nível">
+                    <i class="fas fa-microchip"></i> Simulação do projeto - Sensor de nível
+                </a>
+            </div>
+            <div class="tinkercad-link">
+                <a href="https://www.tinkercad.com/things/0KfqIDGG1hX-sensor-de-ph" target="_blank" aria-label="Simulação do projeto - Sensor de pH">
+                    <i class="fas fa-microchip"></i> Simulação do projeto - Sensor de pH
                 </a>
             </div>
 
@@ -98,6 +165,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="waterControl.js"></script>
 
 </body>
